--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <title>Calculator</title>
 </head>
@@ -17,10 +16,10 @@
             <input type="text" name="screen" id="screen">
             <table>
                 <tr>
-                    <td><button class="operations">(</button></td>
-                    <td><button class="operations">)</button></td>
+                    <td><button class="btn">C</button></td>
+                    <td><button class="operations">%</button></td>
                     <td><button class="operations">/</button></td>
-                    <td><button class="btn">AC</button></td>
+                    <td><button class="operations">←</button></td>
                 </tr>
                 <tr>
                     <td><button>7</button></td>
@@ -41,10 +40,16 @@
                     <td><button class="operations">+</button></td>
                 </tr>
                 <tr>
-                    <td><button class="operations">%</button></td>
+                    <td><button>00</button></td>
                     <td><button>0</button></td>
                     <td><button class="operations">.</button></td>
                     <td><button class="operations">=</button></td>
+                </tr>
+                <tr>
+                    <td><button class="operations">(</button></td>
+                    <td><button class="operations">)</button></td>
+                    <td><button class="operations"></button></td>
+                    <td><button class="operations"></button></td>
                 </tr>
             </table>
         </div>
